# SirenLanguage

./: .gitignore  Cargo.toml  README.md  test1.siren
examples/: algebra.siren  branch.siren  fib.siren  main.siren  simple_expr.siren  string.siren
src/: bind.rs  expr.rs  interpreter.rs  lib.rs  main.rs  parser.rs  statement.rs
src/compiler/: chunk.rs  instruction.rs  mod.rs
src/interpreter/: mod.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  ast_display.rs  ast_pretty_print.rs  bind.rs  error.rs  expr.rs  function_parser.rs  grammar.pest  item_parser.rs  mod.rs  parse_func.rs  pratt_parser.rs  statement.rs  variable.rs
src/stack_vm/: error.rs  instruction.rs  mod.rs  runtime_error.rs  stack.rs  value.rs
