[package]
name = "siren_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.0.0"
pest = "2.7.10"
pest_derive = "2.7.10"


[[bin]]
name = "siren"
path = "src/main.rs"
